--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -16,7 +16,7 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active"> 
+                <li class="menu-item "> 
                     <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
@@ -120,7 +120,7 @@
             <div class="content-header">
                 <div>
                     <h2 class="content-title card-title">Products List</h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Product with its details are shown here.</p>
                 </div>
                 <div>
                     <a href="/admin/productAdd" class="btn btn-primary btn-sm rounded">Create new</a>
