--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -136,7 +136,7 @@
                             <div class="same-style cart-wrap">
                                 <a href="/" class="cart-active">
                                     <i class="dlicon shopping_bag-20"></i>
-                                    <span class="count-style">02</span>
+                                    <!-- <span class="count-style"></span> -->
                                 </a>
                             </div>
                             <div class="same-style header-search">
@@ -188,12 +188,26 @@
                     <div class="col-6">
                         <div class="mobile-header-right-wrap">
                             <div class="header-right-wrap header-right-flex">
+                                <div class="search-content">
+                                    <form class="search-form" action="#">
+                                        <input type="text" placeholder="Search">
+                                        <button class="button-search"><i class="dlicon ui-1_zoom"></i></button>
+                                    </form>
+                               </div>
+                                <div class="same-style header-wishlist">
+                                    <a href="/wishlist"><i class="fa fa-heart-o"></i></a>
+                                </div>
                                 <div class="same-style cart-wrap">
                                     <a href="/productCart" class="cart-active">
                                         <i class="dlicon shopping_bag-20"></i>
                                         <!-- <span class="count-style">02</span> -->
                                     </a>
-                                </div>   
+                                </div> 
+                                
+                                
+                                
+                               
+
                                 <div class="dropdown same-style">
                                     <a href="#"><i class="fa fa-user"></i></a>
                                     <div class="dropdown-content account-dropdown-active">
