--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -118,7 +118,7 @@
             <div class="tab-content jump-3 pt-30">
                 <div id="shop-1" class="tab-pane active">
                     <div class="row">
-                          
+                        <% const proData = prodData.slice().reverse(); %>
                         <% for(let i=0; i <proData.length ; i++){ %>
                             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                                 <div class="product-wrap mb-50">
